dj_server/nohup.out
INFO:tornado.access:200 GET /odoo/api/order_partner_deliver_detail_list?partner_id=571dbf0c006f874b52b126aa&amp;start_time=2016-05-30%2010:10:10&end_time=2016-05-31%2010:10:10 (192.168.150.242) 9.67ms
INFO:tornado.access:200 GET /odoo/api/order_partner_deliver_detail_list?partner_id=571dbf0c006f874b52b126aa&amp;start_time=2016-05-30%2010:10:10&end_time=2016-05-31%2010:10:10 (192.168.150.242) 10.29ms
INFO:tornado.access:200 GET /odoo/api/order_partner_deliver_detail_list?partner_id=571dbf0c006f874b52b126aa&amp;start_time=2016-05-30%2010:10:10&end_time=2016-05-31%2010:10:10 (192.168.150.242) 7.30ms
INFO:tornado.access:200 GET /odoo/api/order_partner_deliver_detail_list?partner_id=571dbf0c006f874b52b126aa&amp;start_time=2016-05-30%2010:10:10&end_time=2016-05-31%2010:10:10 (192.168.150.242) 5.51ms
WARNING:tornado.access:404 GET /odoo/api/order_partner_deliver_detail?deliver_id=574e3da387b24433a4aecffe (192.168.150.242) 1.83ms
INFO:tornado.access:200 GET /odoo/api/good_partner?sku=dhd200 (192.168.150.242) 319.24ms
INFO:tornado.access:200 GET /odoo/api/order_partner_deliver_detail_list?partner_id=571dbf0c006f874b52b126aa&amp;start_time=2016-05-30%2010:10:10&end_time=2016-05-31%2010:10:10 (192.168.150.242) 8.36ms
WARNING:tornado.access:404 GET /odoo/api/order_partner_deliver_detail?deliver_id=574e3da387b24433a4aecffe (192.168.150.242) 0.41ms
INFO:tornado.general:/home/dhui100/develop/ods/tnd_server/handlers/partner_handlers.py modified; restarting server
INFO:tornado.general:/home/dhui100/develop/ods/tnd_server/handlers/partner_handlers.py modified; restarting server
Traceback (most recent call last):
  File "/home/dhui100/develop/ods/tnd_server/main.py", line 13, in <module>
    import app
  File "/home/dhui100/develop/ods/tnd_server/app.py", line 4, in <module>
    import urls
  File "/home/dhui100/develop/ods/tnd_server/urls.py", line 39, in <module>
    _generate_handler_patterns("handlers", handler_names)
  File "/home/dhui100/develop/ods/tnd_server/urls.py", line 17, in _generate_handler_patterns
    module = importlib.import_module(".%s" % name, root_module)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/dhui100/develop/ods/tnd_server/handlers/partner_handlers.py", line 12, in <module>
    import ods.dhui.dhui_product_template as dpt
  File "/home/dhui100/develop/ods/dhui/dhui_product_template.py", line 8, in <module>
    import ods.utils as utils
  File "/home/dhui100/develop/ods/utils.py", line 331
    
        ^
IndentationError: expected an indented block
INFO:tornado.access:200 GET /odoo/api/order_partner_deliver_detail_list?partner_id=571dbf0c006f874b52b126aa&amp;start_time=2016-05-30%2010:10:10&end_time=2016-05-31%2010:10:10 (192.168.150.242) 8.98ms
INFO:tornado.general:/home/dhui100/develop/ods/utils.py modified; restarting server
INFO:tornado.general:/home/dhui100/develop/ods/utils.py modified; restarting server
INFO:tornado.general:/home/dhui100/develop/ods/utils.py modified; restarting server
INFO:tornado.general:/home/dhui100/develop/ods/utils.py modified; restarting server
INFO:tornado.general:/home/dhui100/develop/ods/utils.py modified; restarting server
INFO:tornado.general:/home/dhui100/develop/ods/utils.py modified; restarting server
INFO:tornado.general:/home/dhui100/develop/ods/utils.py modified; restarting server
INFO:tornado.general:/home/dhui100/develop/ods/utils.py modified; restarting server
Traceback (most recent call last):
  File "/home/dhui100/develop/ods/tnd_server/main.py", line 13, in <module>
    import app
  File "/home/dhui100/develop/ods/tnd_server/app.py", line 4, in <module>
    import urls
  File "/home/dhui100/develop/ods/tnd_server/urls.py", line 39, in <module>
    _generate_handler_patterns("handlers", handler_names)
  File "/home/dhui100/develop/ods/tnd_server/urls.py", line 17, in _generate_handler_patterns
    module = importlib.import_module(".%s" % name, root_module)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/dhui100/develop/ods/tnd_server/handlers/partner_handlers.py", line 12, in <module>
    import ods.dhui.dhui_product_template as dpt
  File "/home/dhui100/develop/ods/dhui/dhui_product_template.py", line 8, in <module>
    import ods.utils as utils
  File "/home/dhui100/develop/ods/utils.py", line 353
    
                                                ^
IndentationError: expected an indented block
